--- a/cse190_listApp/bin/AndroidManifest.xml
+++ b/cse190_listApp/bin/AndroidManifest.xml
@@ -17,11 +17,20 @@
             android:name="com.example.cse190_listapp.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
+                <action android:name="android.intent.action.start" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>  
+        <activity
+            android:name="com.example.cse190_listapp.Splash"
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
     </application>
 
 </manifest>
