--- a/cse190_listApp/AndroidManifest.xml
+++ b/cse190_listApp/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>  
         <activity
-            android:name="com.example.cse190_listapp.Splash"
+            android:name="com.example.cse190_listapp.displayRestaurantMenu"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
