--- a/cse190_listApp/AndroidManifest.xml
+++ b/cse190_listApp/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.cse190_listapp"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    
+	<uses-permission android:name="android.permission.INTERNET" /> 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
