--- a/cse190_listApp/AndroidManifest.xml
+++ b/cse190_listApp/AndroidManifest.xml
@@ -3,13 +3,17 @@
     package="com.example.cse190_listapp"
     android:versionCode="1"
     android:versionName="1.0" >
-    <uses-permission android:name="android.permission.INTERNET" /> 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-  	 
+<!--     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> -->
+<!--     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> -->
+<!--     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/> -->
+<!--     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/> -->
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />  
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+
 
     <application
         android:allowBackup="true"
@@ -25,7 +29,7 @@
             </intent-filter>
         </activity>  
         <activity
-            android:name="com.restaurant.com.DisplayRestaurantInfo"
+            android:name="com.example.cse190_listapp.DisplayDishesActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,14 +39,6 @@
         </activity>
         <activity
             android:name="com.example.cse190_listapp.SignUpActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.example.cse190_listapp.DisplayDishesActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
