--- a/cse190_listApp/AndroidManifest.xml
+++ b/cse190_listApp/AndroidManifest.xml
@@ -37,6 +37,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.example.cse190_listapp.DisplayRestaurantMenu"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name="com.example.cse190_listapp.SignUpActivity"
             android:label="@string/app_name" >
             <intent-filter>
