--- a/cse190_listApp/AndroidManifest.xml
+++ b/cse190_listApp/AndroidManifest.xml
@@ -10,14 +10,14 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CALL_PHONE" />
-
+	
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon_fmc"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
