--- a/cse190_listApp/AndroidManifest.xml
+++ b/cse190_listApp/AndroidManifest.xml
@@ -64,7 +64,7 @@
         </activity>
         <activity
             android:name="com.example.cse190_listapp.DishDetailsActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" >"
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
