--- a/cse190_listApp/AndroidManifest.xml
+++ b/cse190_listApp/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:name="com.example.cse190_listapp.FirstLaunchActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
             >
             <intent-filter>
                 <action android:name="android.intent.action.start" />
@@ -56,6 +57,7 @@
             android:name="com.example.cse190_listapp.SignUpActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
             >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -66,6 +68,7 @@
             android:name="com.example.cse190_listapp.DisplayDishesActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
             >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -86,6 +89,7 @@
             android:name="com.example.cse190_listapp.EditProfileActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
             >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -96,6 +100,7 @@
             android:name="com.example.cse190_listapp.WriteReviewActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
              >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
